fixed toolbar wrapping

--- a/resume.css
+++ b/resume.css
@@ -68,6 +68,7 @@ div#mainToolBar .toolbar-row {
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    flex-wrap: wrap;
 }
 
 div#fileName .editable {
@@ -87,6 +88,7 @@ div#fileName .editable {
 
 .toolbar-button-list {
     display: flex;
+    flex-wrap: wrap;
 }
 
 
